# electionguard-rust

other/spec-todo/: .gitignore  EG-v2.1-Spec-Priorities.txt  TODO-2.1.txt  TODO-2.1.txt.db.other_items.csv  TODO-2.1.txt.db.pages.csv  TODO-2.1.txt.db.sections.csv  TODO-2.1.txt.db.totals.2025-04-22.csv  TODO-2.1.txt.db.totals.2025-04-29.csv  TODO-2.1.txt.db.totals.latest.csv  TODO-2.1.txt.db.xdones.csv  TODO-2.1.txt.db.xnotes.csv  TODO-2.1.txt.db.xreq_statuses.csv  TODO-2.1.txt.db.xreqs.csv  TODO-2.1.txt.db.xreqs_statuses.csv  TODO-2.1.txt.db.xreqs_statuses.status-lte-ics.csv  TODO-2.1.txt.db.xreqs_statuses.status-nyi.csv  TODO-2.1.txt.db.xtodos.csv  jj-query-xreqs-stats
other/spec-todo/html/: functional_reqs.html  index.html  other_items.html  xreqs.html  xtodos.html
other/spec-todo/munge-reqs/: Cargo.toml  munge-reqs  munge-reqs.code-workspace
other/spec-todo/munge-reqs/src/: clargs.rs  db.rs  files.rs  html_writer.rs  init.sql  main.rs
other/spec-todo/spec-mapping/: eg-spec-mapping.db.mapping.csv  eg-spec-mapping.session.sql  export-to-csv  see all v200_sec_names.sql
other/unused-code/formulator/src/: error.rs  lib.rs
other/unused-code/formulator/src/imp/: domain.rs  hasher.rs  mod.rs  problem.rs  rule.rs  solution.rs  sym.rs  sym_set.rs
src/: Cargo.toml
src/demo-eg/: Cargo.toml
src/eg/: Cargo.toml
src/eg-resourceproducer-filesystem/: Cargo.toml
src/eg/src/: ballot.rs  ciphertext.rs  contest_data_fields_ciphertexts.rs  contest_data_fields_plaintexts.rs  extended_base_hash.rs  hashes.rs  joint_public_key.rs  loadable.rs  resource.rs  resource_producer.rs  resourceproducer_validatetoedo.rs  resources.rs  standard_parameters.rs  tally_ballots.rs  voter_selections_plaintext.rs  voting_device.rs
src/electionguard/: Cargo.toml
src/fixed-width-nonnegative/: Cargo.toml  build.rs
src/fixed-width-nonnegative/build_mod/: features.rs  limb_type.rs  mod.rs  module_usedeclset.rs  numimpl_info.rs  type_author.rs  type_info.rs  types.rs  write.rs  write_files.rs
src/fixed-width-nonnegative/build_mod/numimpl/: basic_array.rs  crypto_bigint.rs  hacl.rs  mod.rs  num_bigint.rs
src/fixed-width-nonnegative/shared-inc/: types-nonpub.inc.rs  types-pub.inc.rs
src/fixed-width-nonnegative/src/: lib.rs  power_of_two.rs  primitive_unsigned.rs  significant_first.rs  tests-basicarray_u64-Nonnegative_4096.inc.rs  tests-n.inc.rs  tests.rs
src/fixed-width-nonnegative/src/significant_first/: ops.rs
src/preencrypted/: Cargo.toml
src/test-data-generation/: Cargo.toml
src/test-data-generation/src/test_data_generation/: council.rs  mod.rs  personae.rs  shuffle.rs
src/test-electionguard/: Cargo.toml
src/util/: Cargo.toml
src/util/src/: array_ascii.rs  base16.rs  bit_range.rs  const_conv_ui128_f64.rs  const_minmax.rs  lib.rs
test/: Cargo.toml
test/bench-util/: Cargo.toml
test/bench-util/src/: lib.rs
test/fixed-width-nn-bench/: .env  Cargo.toml  notes.txt
test/fixed-width-nn-bench-db/: Cargo.toml  build.rs  diesel.toml
test/fixed-width-nn-bench-db/migrations/2024-03-16-005804_create_table_exes/: down.sql  up.sql
test/fixed-width-nn-bench-db/src/: db.rs  db_models.rs  db_schema.rs  lib.rs
test/fixed-width-nn-bench/src/: main.rs  time_fns_00.rs
test/test-eg/: Cargo.toml
test/test-eg/benches/: bench.rs
test/test-eg/benches/b/: b1_ballotnonce_generate.rs  b2_ballotnonce_derive_ballotcontestoptionfieldnonce.rs  b3_encrypt_contestoptionselectionvalue.rs  b4_encrypt_ballot.rs  b5_make_exptable.rs  b6_use_exptable.rs  mod.rs
test/test-eg/src/: lib.rs
test/test-fixed-width-nonnegative/: Cargo.toml
test/test-fixed-width-nonnegative/benches/: bench.rs
test/test-fixed-width-nonnegative/benches/bench/: bench-impl-n.inc.rs  bench-impl.inc.rs
test/test-fixed-width-nonnegative/src/: lib.rs  tests-impl-n.inc.rs  tests-impl.inc.rs  tests.rs
