
[package]
name = "munge-reqs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]

#--- From crates.io

anyhow = "1.0.97"
argh = "0.1.13"
faster-hex = { version = "0.10.0" }
minijinja = "2.8.0"
regex = "1.11.1"
rusqlite = { version = "0.34.0", features = ["backup"] }
shell-words = "1.1.0"

#--- Serde

# erased-serde = { version = "0.4.6" }
serde = { version = "1.0.219", features = ["derive", "rc", "std"] }
serde_json = { version = "1.0.140", features = ["preserve_order", "std"] }
# serde_tokenstream = "0.2.2"
# serde_with = { version = "3.12.0", features = ["alloc", "macros"] } #default-features = false,

#--- RustCrypto

sha3 = { version = "0.10.8", default-features = false, features = [
    "reset",
    "std",
    # depends on digest 0.11 "zeroize",
] }
